# edan55-labs

./: .gitignore  docs
fedups/: Cargo.toml
fedups/benches/: bench.rs
fedups/data/: strange2-fix.in
fedups/src/: lib.rs  main.rs  markov.rs  monte_carlo.rs  transform_input.rs
independentset/: Cargo.toml
independentset/benches/: bench.rs
independentset/src/: lib.rs  main.rs
maxcut/: Cargo.toml
maxcut/benches/: bench.rs
maxcut/data/: pw09_100.9.txt
maxcut/src/: lib.rs  main.rs
treewidth/: Cargo.toml  res.txt
treewidth/benches/: bench.rs
treewidth/data/: gr-only.td
treewidth/src/: algorithm.rs  arena_tree.rs  filenames.txt  lib.rs  main.rs  transform_input.rs
